--- a/index.html
+++ b/index.html
@@ -3,8 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Flappy Clone - By Ezequiel Pereira</title>
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <link href="/assets/css/style.css.map" rel=stylesheet />
+    <link href="/assets/css/style.css" rel=stylesheet />
 </head>
 <body>
+<div id="canvas-holder">
 
+</div>
+
+<!-- Compiled and minified JavaScript -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.min.js"
+        integrity="sha256-hTadFyx999S2PaNVgI6MyGaojC6fzBZb2D5GibT/Fno=" crossorigin="anonymous"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/addons/p5.dom.min.js"
+        integrity="sha256-XJv4F6vIKIxDBK9yFUP0+7QP6z7AHjwNvmAS/ZsNogM=" crossorigin="anonymous"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/addons/p5.sound.min.js"
+        integrity="sha256-6pVtCAjafcylu7oG0UhoMkUxhAMMMKP5elLWf9UXS+c=" crossorigin="anonymous"></script>
+<script src="/assets/js/sketch.js"></script>
 </body>
 </html>
