Pipes are showing now

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         integrity="sha256-6pVtCAjafcylu7oG0UhoMkUxhAMMMKP5elLWf9UXS+c=" crossorigin="anonymous"></script>
 <script src="/assets/js/game.js"></script>
 <script src="/assets/js/bird.js"></script>
+<script src="/assets/js/pipe.js"></script>
 <script src="/assets/js/sketch.js"></script>
 </body>
 </html>
