--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         <div class="col s1 verticalBarContainer">
             <div class="stripedbg verticalBar left"></div>
         </div>
-        <div class="col s1"></div>
+        <div class="col s1">
+            <span>Score:</span>
+            <span id="score">0</span>
+        </div>
     </div>
 
 </div>
