--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Flappy Dappy - By Ezequiel Pereira</title>
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Harmattan" rel="stylesheet">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- Compiled and minified CSS -->
@@ -29,7 +30,7 @@
         <div class="col s1 verticalBarContainer">
             <div class="stripedbg verticalBar left"></div>
         </div>
-        <div class="col s1">
+        <div class="col s1 scoreboard">
             <span>Score:</span>
             <span id="score">0</span>
         </div>
@@ -49,6 +50,7 @@
 <script src="/assets/js/game.js"></script>
 <script src="/assets/js/bird.js"></script>
 <script src="/assets/js/pipe.js"></script>
+<script src="/assets/js/background.js"></script>
 <script src="/assets/js/sketch.js"></script>
 </body>
 </html>
